@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.449 2005/12/09 22:38:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.450 2005/12/11 20:34:41 rocket Exp $
+
+  11 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
+  Add support for bootloader softlevel=; have rsync delete the extra files out
+  of the overlay so that the overlay always matches the source dir
 
   09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   Swapped -v/-V since I had gotten them wrong here.
